--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.2.0",
+    "dotenv": "^4.0.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "knex": "^0.13.0",
     "morgan": "~1.7.0",
+    "ngrok": "^2.2.23",
     "pg": "^7.3.0",
     "psql": "0.0.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "twilio": "^3.8.1"
   }
 }
